--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My_Name Homepage</title>
+	<title>Sugi's Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 <body>
 	<main>
+		<h1>Welcome to my webpage!</h1>
 		<p>This page was generated from Wes' File Structure Template Repo.</p>
-		
+
 		<p>Go crazy and customize me.</p>
 	</main>
 
