--- a/lab2/index.html
+++ b/lab2/index.html
@@ -4,8 +4,39 @@
 	<title>Lab X - Subject/Topic</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Beastly&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<div id="background">
+
+	<div id="content">
+
+ <h1>Hello World.</h1>
+
+<div id="Jeremy">
+		<h2>Jeremy</h2>
+</div>
+			<p>Jeremy is my lab partner and, conveniently, also one of my 6 roomates. He has a giant collection of DND minifigures and a
+			30 year old cockatoo who can say "I love you".</p>
+
+<div id="Sugi">
+		<h2>Sugi</h2>
+</div>
+			<p>Sugi is one of my roomates. He's pretty chill. He dyed his hair recently and it looks cool. </p>
+
+	</div>
+
+</div>
+
+<div id="cat">
+ <img src="img/dancingcat.gif">
+</div>
 
 </body>
 </html>
