--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 <body>
 	<main>
 		<h1>Welcome to my webpage!</h1>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
+		<p>This page was generated from Wes' File Structure Template Repo.(cool.)</p>
 
-		<p>Go crazy and customize me.</p>
+		<p>Go crazy and customize me. (I will later)</p>
 	</main>
+
+	<li><a href="lab2/index.html">Lab 2: HTML & CSS Refresher</a></li>
 
 
 </body>
