--- a/index.html
+++ b/index.html
@@ -3,16 +3,56 @@
 <head>
 	<title>Sugi's Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
 </head>
 <body>
 	<main>
-		<h1>Welcome to my webpage!</h1>
-		<p>This page was generated from Wes' File Structure Template Repo.(cool.)</p>
 
-		<p>Go crazy and customize me. (I will later)</p>
+		<div id="welcome">
+			<h1>Welcome to my webpage!</h1>
+				<p>Welcome to the webpage of Sugi Sugihara, a Communication Design student concetrating in visual (graphic) design at
+					Cal State Monterey Bay.</p>
+		</div>
+
+		<div id="about">
+			<h2>About Me</h2>
+				<img src="img/portrait.jpg">
+				<p> I am originally from Seal Beach, California, but I moved to Monterey to pursue the unique opportunity to get an Assoiates of
+					Science but in design. Besides design, I love illustration, cosplay, hiking, and sewing. I am also very passionate about marine
+					biology; I used to be a student worker in the Dennis Kelly aquarium and an education volunteer at the Aquarium of the Pacific.
+					Afrer CSUMB, I will return to Orange Coast College to complete my degree in aquarium science. I hope to use both of my degrees
+					in tandem to get a job in the marine biology field.
+				<p></p>
+		</div>
+
+		<div id="links">
+			<h2>Lab Links</h2>
+				<li><a href="lab2/index.html">Lab 2: HTML & CSS Refresher</a></li>
+				<li><a href="lab3/index.html">Lab 3: File Structure and File Transfer</a></li>
+				<li><a href="lab4/index.html">Lab 4: Pseudocoding and Problem-solving</a></li>
+				<li><a href="lab5/index.html">Lab 5: Data Types and Variables</a></li>
+				<li><a href="lab6/index.html">Lab 6: Arrays and Objects</a></li>
+				<li><a href="lab7/index.html">Lab 7: Functions</a></li>
+				<li><a href="lab8/index.html">Lab 8: Anon Functions and Callbacks</a></li>
+				<li><a href="lab9/index.html">Lab 9: JavaScript for the Web</a></li>
+				<li><a href="lab10/index.html">Lab 10: JavaScript Events and Forms</a></li>
+				<li><a href="lab11/index.html">Lab 11: Libraries & Intro to jQuery</a></li>
+				<li><a href="lab12/index.html">Lab 12: Advanced jQuery</a></li>
+				<li><a href="lab13/index.html">Lab 13: Conditionals</a></li>
+				<li><a href="lab14/index.html">Lab 14: Loops</a></li>
+				<li><a href="lab15/index.html">Lab 15: Basic Debugging</a></li>
+				<li><a href="lab16/index.html">Lab 16: Javascript Classes and Objects</a></li>
+				<li><a href="lab17/index.html">Lab 17: Object-Oriented Design</a></li>
+				<li><a href="lab18/index.html">Lab 18: Libraries and Frameworks 1</a></li>
+				<li><a href="lab19/index.html">Lab 19: AJAX</a></li>
+				<li><a href="lab20/index.html">Lab 20: JSON and APIs</a></li>
+		</div>
+
 	</main>
 
-	<li><a href="lab2/index.html">Lab 2: HTML & CSS Refresher</a></li>
+
 
 
 </body>
