--- a/lab2/index.html
+++ b/lab2/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-<div id="background">
+<div id="background"><div class="parent">
 
-	<div id="content">
+	<div id="content"><div class="child">
 
  <h1>Hello World.</h1>
 
@@ -30,9 +30,9 @@
 </div>
 			<p>Sugi is one of my roomates. He's pretty chill. He dyed his hair recently and it looks cool. </p>
 
-	</div>
+	</div></div>
 
-</div>
+</div></div>
 
 <div id="cat">
  <img src="img/dancingcat.gif">
