--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 3: File Structure and File Transfer</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+
+	<h1>Lab 3: File Structure and File Transfer</h1>
+		<p>For this lab, we created indexex within our computers for both our homepages and lab 3.</p>
+
+		<h2>Challenges</h2>
+			<p>Because I took 251 last semester, most of this stuff was just review. I showed Jeremy how to do a few things and brushed
+			up on a few skills myself. I somehow got confused on what screenshots to post put here, but I think I got it. I don't know
+		  why my images won't scale down, it's normally a simple process but it's not working.</p>
+
+		<h2>Results</h2>
+			<p>Here are the screenshots:</p>
+
+		  <div id="img1">
+			<img src= "img/screenshotlab31.png">
+	  	</div>
+
+			<div id="img2">
+		 	<img src= "img/screenshotlab32.png">
+	  	</div>
+
+			<div id <"img3">
+			<img src= "img/screenshotlab33.png">
+  		</div>
 
 </body>
 </html>
