--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5: Date Types and Variables</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div id="content">
+		<h1>Lab 5: Data Types and Variables</h1>
+			<p>Using basic Javescript, we created types and variables to
+				create an output detailing Jeremy's car.</p>
+
+			<h2>Challenges</h2>
+				<p>It was pretty easy up until we had to try to actually see the script in the browser.
+					The author block was causing a ton of frusturating syntax errors (from the ** and *), so we just made them into comments.
+					We used inspect elements in the browser to check for syntax errors.</p>
+
+			<h2>Results</h2>
+				<p>Here's the script: </p>
+
+		<h2>Script Output</h2>
+		<script src="js/lab.js"></script>
+
+	</div>
+
 
 </body>
 </html>
