--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 6: Arrays and Objects</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div id="content">
+		<h1>Lab 6: Arrays and Objects</h1>
+				<img src="img/jeremycar.png">
+			<p>Working together, we used JaveScript arrays and objects in conjunction to create a script output.</p>
+
+			<h2>Challenges</h2>
+				<p>The syntax of declaring and object frusturated us for a long time until we finally figured out the proprer formatting.</p>
+
+			<h2>Results</h2>
+				<p>Here's the script: </p>
+
+		<h2>Script Output</h2>
+		<script src="js/lab.js"></script>
 
 </body>
 </html>
