--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 					Science but in design. Besides design, I love illustration, cosplay, hiking, and sewing. I am also very passionate about marine
 					biology; I used to be a student worker in the Dennis Kelly aquarium and an education volunteer at the Aquarium of the Pacific.
 					Afrer CSUMB, I will return to Orange Coast College to complete my degree in aquarium science. I hope to use both of my degrees
-					in tandem to get a job in the marine biology field.
-				<p></p>
+					in tandem to get a job in the marine biology field.</p>
 		</div>
 
 		<div id="links">
