--- a/lab5/index.html
+++ b/lab5/index.html
@@ -9,7 +9,7 @@
 	<div id="content">
 		<h1>Lab 5: Data Types and Variables</h1>
 		<img src="img/jeremycar.png">
-			<p>Using basic Javescript, we created types and variables to
+			<p>Using basic Javascript, we created types and variables to
 				create an output detailing Jeremy's car.</p>
 
 			<h2>Challenges</h2>
